@@ -8,3 +8,7 @@ Please check [README_JP.md](./README_JP.md) for details.
 Running the project with Maven:
 
 	$ mvn jetty:run
+
+When OutOfMemoryError of PermGen space occurs, set MaxPermSize.
+
+	$ export MAVEN_OPTS="-XX:MaxPermSize=128m"
